--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,8 @@ dependencies:
   archive: ^3.6.1
   image_picker: ^0.8.7+3
   file_picker: ^5.2.4
-  path_provider: 
+  path_provider:
+  shared_preferences:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
