--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   path_provider:
   shared_preferences:
   url_launcher: ^6.0.9
+  intl: ^0.18.0
+  share_plus: ^7.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
