--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,7 +45,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
-	<key>NSPhotoLibraryUsageDescription</key>
-    <string>We need access to your photo library to select files.</string>
+	<key>NSCameraUsageDescription</key>
+    <string>Autorisez l'acces a votre camera.</string>
 </dict>
 </plist>
